<resources>
    <string name="app_name">POD App</string>
    <string name="ip_address">IP Address</string>
    <string name="default_ip">192.168.1.1</string>
    <string name="port">Port</string>
    <string name="sample_text">Sample Text</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">Payment</string>
    <string name="ok">OK</string>
    <string name="start_provisioning">Start Provisioning</string>
    <string name="_8000">8000</string>
    <string name="connect">Connect</string>
    <string name="ssid">SSID</string>
    <string name="enter_password">Enter Password</string>
    <string name="wi_fi_list">Wi-Fi List</string>
    <string name="settings">Settings</string>
    <string name="content_status_updated">Content is already updated</string>
    <string name="choose_wifi_network">Choose Wifi Network</string>
    <string name="kiosk_mode">KIOSK Mode</string>
    <string name="clear_content">Clear Content</string>
    <string name="pod">POD</string>
    <string name="device_name">Device Name</string>
    <string name="port_no">Port No.</string>
    <string name="organization_id">Organization Id</string>
    <string name="activation_code">Activation Code</string>
    <string name="mqtt_endpoint">MQTT Endpoint</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="no_of_visitors">No. of Visitors</string>
    <string name="enter">Enter</string>
    <string name="back">Back</string>
    <string name="invalid_card">Invalid Card</string>
    <string name="invalid_card_details">Sorry, the card you just scanned is invalid. Please contact POD support.</string>
    <string name="expired_card">Expired Card</string>
    <string name="expired_card_details">Sorry, the card you just scanned is expired. Please contact POD support.</string>
    <string name="enter_your_pin_to_continue">Enter Your Pin to Continue</string>
    <string name="enter_pin_to_access_pod_settings">Enter PIN to Access POD Settings</string>
    <string name="clear">CLEAR</string>
    <string name="cancel">Cancel</string>
    <string name="your_card_is_processing">Your card is processing</string>
    <string name="powered_by">Powered By</string>
    <string name="scan_your_card_here">Scan Your Card Here</string>
    <string name="entrance_verification">Entrance Verification</string>

    //Error Messages
    <string name="password_mismatch">Password not matched</string>

    //Card Types
    <string name="gold">Gold</string>
    <string name="platinum">Platinum</string>
    <string name="diamond">Diamond</string>
</resources>
